# anythrow

./: Cargo.toml  LICENSE.md  README.md
anythrow/: Cargo.toml
anythrow/src/: dbg.rs  error.rs  extensions.rs  future.rs  imp.rs  lib.rs  result_like.rs
anythrow_macro/: Cargo.toml
anythrow_macro/src/: lib.rs  try_catch.rs
exemples/try_catch/: Cargo.toml
exemples/try_catch/src/: main.rs
