[workspace]
resolver = "2"
members = ["anythrow", "anythrow_macro", "exemples/try_catch"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Baptiste de Montangon"]
license = "MIT"
repository = ""
description = ""
readme = "./README.md"

[workspace.dependencies]
anythrow_macro = { version = "0.1.0", path = "./anythrow_macro" }
anythrow = { version = "0.1.0", path = "./anythrow" }
pin-project = "1"
proc-macro2 = "1"
quote = "1"
syn = "2.0"
