[package]
name = "anythrow"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
readme = { workspace = true }

[dependencies]
anythrow_macro = { workspace = true }

pin-project = { workspace = true }
